# renovate-extractversion-pylint

./: .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
